# Load_Docker

./: .gitignore  README.md  compose.yml  pyproject.toml  requirements.txt
elastic/: Dockerfile
ollama/: Dockerfile  pull-ollama.sh
postgres/: Dockerfile
test/: test_elastic.ipynb  test_hybridsearch.ipynb  test_postgres.ipynb  test_postgres_builder.ipynb
