[project]
name = "my-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "docling>=2.55.1",
    "elasticsearch>=8.19.1",
    "langchain>=0.3.27",
    "langchain-elasticsearch>=0.3.2",
    "langchain-ollama>=0.3.10",
    "pdfplumber>=0.11.7",
    "psycopg2-binary>=2.9.10",
]
